--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "type": "git",
     "url": "git+https://github.com/alanhamlett/purpleair-notify.git"
   },
-  "keywords": ["purpleair", "air-quality"],
+  "keywords": [
+    "purpleair",
+    "air-quality"
+  ],
   "author": "Alan Hamlett <alan.hamlett@gmail.com>",
   "license": "MIT",
   "bugs": {
@@ -20,6 +23,7 @@
   },
   "homepage": "https://github.com/alanhamlett/purpleair-notify#readme",
   "devDependencies": {
+    "@types/node": "^14.11.8",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
