scrape on push event for testing

--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -9,6 +9,9 @@ on:
            # │  │ │ │ │
            # *  * * * *
     - cron: '27 * * * *'
+  push:
+    branches:
+      - master
 jobs:
   scrape:
     name: Check AQI
